crates/parser/src/tests/snapshots/kcl_parser__tests__expr__expr_with_bracket_6.snap
---
source: crates/parser/src/tests/expr.rs
expression: "$crate :: tests :: parsing_expr_string(r####\"[\n    1,2,\n]\n        \"####)"
---
Node {
    node: List(
        ListExpr {
            elts: [
                Node {
                    node: NumberLit(
                        NumberLit {
                            binary_suffix: None,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                    filename: "",
                    line: 2,
                    column: 4,
                    end_line: 2,
                    end_column: 5,
                },
                Node {
                    node: NumberLit(
                        NumberLit {
                            binary_suffix: None,
                            value: Int(
                                2,
                            ),
                        },
                    ),
                    filename: "",
                    line: 2,
                    column: 6,
                    end_line: 2,
                    end_column: 7,
                },
            ],
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 3,
    end_column: 1,
}
